--- a/css/vote.css
+++ b/css/vote.css
@@ -1,62 +1,79 @@
 .vote-wrap {
-    padding: 0 1rem;
-    width: 100%;
-    box-sizing: border-box;
+  padding: 0 1rem;
+  width: 100%;
+  box-sizing: border-box;
 }
-.vote-wrap .vote-item {
-    display: flex;
-    height: 8rem;
-    align-items: center;
-}
-.vote-wrap .vote-item .head-wrap {
-    width: 5rem;
-    margin-right: 1rem;
-    height: 7rem;
-}
-.head-img {
-    display: block;
-    width: 5rem;
-    height: 5rem;
-}
-.process-wrap {
-    flex: 1;
-    height: 2rem;
-    background: grey;
-    box-sizing: border-box;
-    position: relative;
-    overflow: hidden;
-}
-.process {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: red;
-    right: 50%;top: 0;
-}
-.block {
-    height: 4rem;
-}
-.submit-wrap {
-    width: 100%;
-    height: 4rem;
-    position: fixed;
-    left: 0;bottom: 0;
-    display: flex;
-    box-sizing: border-box;
-    padding: 0 1rem;
-    justify-content: space-between;
-    align-items: center;
-}
-.detail-wrap {
-    height: 2rem;
-    line-height: 2rem;
-}
-.mark {
 
+.vote-wrap .vote-item {
+  display: flex;
+  height: 8rem;
+  align-items: center;
+  box-sizing: border-box;
 }
+
+.vote-wrap .active {
+  border: 1px solid green;
+}
+
+.vote-wrap .vote-item .head-wrap {
+  width: 8rem;
+  margin-right: 1rem;
+}
+
+.process-wrap {
+  flex: 1;
+  height: 2rem;
+  background: grey;
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
+}
+
+.process {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: red;
+  right: 100%;
+  top: 0;
+}
+
+.block {
+  height: 4rem;
+}
+
+.submit-wrap {
+  width: 100%;
+  height: 4rem;
+  border-top: 1px solid #000000;
+  background: #ffffff;
+  box-sizing: border-box;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 0 1rem;
+}
+.submit-content {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.detail-wrap {
+  height: 2rem;
+  line-height: 2rem;
+}
+
+.mark {}
+
 .submit-button {
-    width: 4rem;
-    height: 3rem;
-    text-align: center;
-    font-size: 2rem;
+  width: 4rem;
+  height: 3rem;
+  text-align: center;
+  font-size: 2rem;
+  box-sizing: border-box;
+  border: 1px solid red;
+  background: gold;
 }
