--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,36 @@
-.list-wrap {
-    padding: 10rem 0;
-    margin: 0 auto;
+.page {
+  width: 100%;
+  height: 100%;
+  background: url('../images/first_bg.png') no-repeat center center;
+  background-size: cover;
 }
+.list-wrap {
+  padding: 10rem 0;
+  margin: 0 auto;
+}
+
 .list-item-button {
-    display: block;
-    width: 20rem;
-    height: 2rem;
-    text-align: center;
-    line-height: 2rem;
-    font-size: 1.6rem;
-    background: #ffffff;
-    box-sizing: border-box;
-    border: 1px solid #000000;
-    margin: 0 auto 2rem;
+  display: block;
+  width: 20rem;
+  height: 4rem;
+  text-align: center;
+  line-height: 4rem;
+  font-size: 2.4rem;
+  background: #ffffff;
+  box-sizing: border-box;
+  border: 1px solid #000000;
+  border-radius: .3rem;
+  margin: 0 auto 2rem;
 }
 
 .clock-wrap {
-
+  width: 100%;
+}
+.clock-wrap p {
+  text-align: center;
 }
 .clock-title {
-
+  margin-bottom: 1rem;
 }
-.clock-time {
 
-}
+.clock-time {}
