--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,27 @@
 .page {
   width: 100%;
   height: 100%;
+  position: absolute;
+  left: 0;top: 0;
+  overflow: hidden;
   background: url('../images/first_bg.png') no-repeat center center;
   background-size: cover;
 }
 .list-wrap {
-  padding: 10rem 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 5rem 0;
   margin: 0 auto;
 }
 
 .list-item-button {
   display: block;
-  width: 20rem;
+  width: 24rem;
   height: 4rem;
   text-align: center;
   line-height: 4rem;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   background: #ffffff;
   box-sizing: border-box;
   border: 1px solid #000000;
@@ -25,6 +31,8 @@
 
 .clock-wrap {
   width: 100%;
+  position: absolute;
+  left: 0;bottom: 5rem;
 }
 .clock-wrap p {
   text-align: center;
