--- a/css/program.css
+++ b/css/program.css
@@ -1,24 +1,24 @@
 @keyframes jump
 {
-  0%   {bottom: 2rem;}
+  0%   {bottom: 3rem;}
   100% {bottom: 1.5rem;}
 }
 
 @-moz-keyframes jump /* Firefox */
 {
-  0%   {bottom: 2rem;}
+  0%   {bottom: 3rem;}
   100% {bottom: 1.5rem;}
 }
 
 @-webkit-keyframes jump /* Safari 和 Chrome */
 {
-  0%   {bottom: 2rem;}
+  0%   {bottom: 3rem;}
   100% {bottom: 1.5rem;}
 }
 
 @-o-keyframes jump /* Opera */
 {
-  0%   {bottom: 2rem;}
+  0%   {bottom: 3rem;}
   100% {bottom: 1.5rem;}
 }
 .page {
@@ -30,39 +30,94 @@
   right: 0;
   bottom: 0;
   z-index: 1;
+  background: url('../images/cw-bg.png') no-repeat center center;
+  background-size: 100% 100%;
+  color: #3d393b;
 }
 .info-wrap {
+  width: 70%;
+  position: absolute;
+  left: 15%;top: 35%;
+}
+.info-radius {
   width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  padding: 10rem 0 0;
-  text-align: center;
+  position: absolute;
+  left: 0;top: 0;
 }
-.info-title {
-  font-size: 1.8rem;
+.left-num {
+  position: absolute;
+  width: 30%;
+  height: 12rem;
+  left: 15%;top: 7rem;
+  background: url('../images/2.png') no-repeat center center;
+  background-size: 100% 100%;
 }
-.info-title span {
-  font-size: 2rem;
+.right-num {
+  position: absolute;
+  width: 30%;
+  height: 12rem;
+  right: 15%;top: 7rem;
+  background: url('../images/8.png') no-repeat center center;
+  background-size: 100% 100%;
+}
+.info-day {
+  width: 6rem;
+  height: 4.6rem;
+  background: url('../images/cw-day.png') no-repeat center center;
+  background-size: 100% 100%;
+  position: absolute;
+  right: -1rem;top: 14rem;
 }
 .button-1 {
-  display: inline-block;
-}
-.button-1 button {
   width: 10rem;
-  height: 2rem;
+  height: 3rem;
+  box-sizing: border-box;
+  padding-left: .6rem;
+  background: linear-gradient(to bottom, #4eb5e5 0%,#389ed5 100%);
+  border: none;
+  border-radius: 5px;
+  position: absolute;
+  right: -1rem;top: 21rem;
+  border-bottom: 4px solid #2b8bc6;
+  color: #fbfbfb;
+  font-weight: 600;
+  text-shadow: 1px 1px 1px rgba(0,0,0,.4);
+  font-size: 1.5rem;
+  text-align: left;
+  line-height: 3rem;
+  text-indent: .5rem;
+  box-shadow: 0px 3px 0px 0px rgba(0,0,0,.2);
+}
+.button-1:after {
+  content: "";
+  width: 0;
+  height: 0;
+  display: block;
+  border-top: 1.5rem solid #187dbc;
+  border-bottom: 1.5rem solid #187dbc;
+  border-left: 1.6rem solid transparent;
+  border-right: 2rem solid #187dbc;
+  position: absolute;
+  opacity: 0.6;
+  right: 0;
+  top: 0;
+  border-radius: 0 5px 5px 0;
 }
 .button-2 {
   position: absolute;
   left: 0;bottom: 1rem;
   width: 100%;
   text-align: center;
+  color: #ffffff;
 }
 .button-2 .arrow-down {
   display: block;
   width: 100%;
-  height: 2rem;
-  background: red;
+  height: 3rem;
+  background: url('../images/arrow-down.png') no-repeat center 0;
+  background-size: 3rem 3rem;
   position: absolute;
   left: 0;bottom: 1.5rem;
   animation: jump 1s linear 0s infinite;
+  -webkit-animation: jump 1s linear 0s infinite;
 }
