--- a/css/reset.css
+++ b/css/reset.css
@@ -9,8 +9,8 @@ dl,dt,dd,ol,ul,li,
 fieldset,form,label,legend,
 table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;}
 :focus{outline:0;}
-html,body{ width:100%; height:100%}
-body{font-size:1.2rem;font-family:"Microsoft YaHei";color:#a8a8a8}
+html,body{ font-size: 2.6666667vw;width:100%; height:100%}
+body{font-family:"Microsoft YaHei";color:#a8a8a8}
 ol,ul{list-style:none}
 table{border-collapse:separate;border-spacing:0}
 caption,th,td{text-align:left;font-weight:normal}
